<resources>
    <string name="app_name">FruityViseApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="fruits_fragment_label">List of Fruits</string>
    <string name="details_fragment_label">Fruit Nutrition Detail</string>

    <string name="nutrition_details">Nutrition Details</string>
    <string name="calories">Calories</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="fat">Fat</string>
    <string name="protein">Protein</string>
    <string name="sugar">Sugar</string>
    <string name="name">"Name: "</string>
</resources>