<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_fruitName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:padding="8dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:layout_gravity="center">


            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:rowCount="4"
                android:columnCount="2"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/calories"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvCalories"
                    tools:text="dfdf"
                    android:textColor="@color/black"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:background="@android:drawable/editbox_background"/>

                <TextView
                    android:text="@string/carbohydrates"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvCarbohydrates"
                    android:text=""
                    android:textColor="@color/black"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:background="@android:drawable/editbox_background"/>

                <TextView
                    android:text="@string/fat"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvFat"
                    android:text=""
                    android:textColor="@color/black"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:background="@android:drawable/editbox_background"/>

                <TextView
                    android:text="@string/protein"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvProtein"
                    android:text=""
                    android:textColor="@color/black"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:background="@android:drawable/editbox_background"/>
                <TextView
                    android:text="@string/sugar"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvSugar"
                    android:text=""
                    android:textColor="@color/black"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:background="@android:drawable/editbox_background"/>

            </GridLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>


</androidx.cardview.widget.CardView>